Fixed word spacing thx the Hexcede

--- a/style.css
+++ b/style.css
@@ -1,54 +1,81 @@
  @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&display=swap');
 :root {
     --background: radial-gradient(circle, rgba(44,10,59,0.9808298319327731) 6%, rgba(35,25,36,1) 38%);
+    --background2: black;
     --textColor: #11e7ff;
     --h1: #30e726;
 }
 
- * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Red Hat Display', sans-serif;
-    box-sizing: border-box;
-
-
- }
-
- .h1 {
-    display: flex;
-    color: var(--h1);
-    font-size: 3.5rem;
-    -webkit-box-reflect: below 2px linear-gradient(transparent, transparent 45%, white);
- }
-
- section {
-    position: relative;
-    display: flex ;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    /* setting min-height to 100vh moves the content down */
-    min-height: 100vh;
-    background: var(--background);
-    
+/* body holds the page the h1, section then <p> tags */
+body {
+   display: flex;
+   box-sizing: border-box;
+   margin: 10px;
+   padding: 0;
+   min-height: 100vh;
+   font-family: 'Red Hat Display', sans-serif;
+ border: 1px solid green;
+   background: var(--background2);
+   }
+   
+section {
+   /* position: relative; */
+   /* display: flex ; */
+   /* flex-wrap: wrap; */
+   /* flex-direction: row; */
+   /* justify-content: center; */
+   /* align-items: center; */
+   overflow: hidden;
+   /* setting min-height to 100vh moves the content down */
+   /* min-height: 100vh; */
+   
 }
 
-section .text {
-    position: relative;
-    text-align: center;
-    margin: 50px;
-    /* color: #00e7ff; */
-    
-    font-size: 20px;
-    max-width: 950px;
+  
+ .h1 {
+    display: flex;
+    justify-content: center;
+    color: var(--h1);
+    font-size: 3.5rem;
+    -webkit-box-reflect: below 2px linear-gradient(transparent , transparent 45%, rgba(255, 255, 255, 0.208));
+ }
+ p {
+   display: flex;
+   justify-content: center;
+ border: 1px solid yellow;
 
+ }
+
+section .text1 {
+    /* position: relative; */
+    /* text-align: center; */
+    /* margin: 50px; */
+    /* white-space: nowrap; */
+    font-size: 2rem;
    
     color: var(--textColor);
     font-family: Bahnschrift;
  }
 
- section .text span {
-    position: relative;
-    display: inline-block;
- }
+ /* section .text1  span {
+ 
+ } */
+ 
+ section .text2 {
+   /* position: relative; */
+   display: flex;
+   flex-wrap: wrap;
+   text-align: center;
+   margin: 5px;
+   color: #00e7ff;
+   /* white-space: pre-line; */
+   font-size: 2rem;
+   min-width: 950px;
+  
+   color: var(--textColor);
+   font-family: Bahnschrift;
+} 
 
+section .text2 span {
+   white-space: pre-wrap;
+}
